# Backend

BÜTÜN C# ÇALIŞMALARI/C# calisması2/: C# calisması2.sln
BÜTÜN C# ÇALIŞMALARI/C# calisması2/calisma2/: Program.cs
BÜTÜN C# ÇALIŞMALARI/C# calisması4/: C# calisması4.sln
BÜTÜN C# ÇALIŞMALARI/C# calisması4/calisma4/: Program.cs
C:C++ çalışması/: CMakeLists.txt  Calisma  Calisma.c  Calisma.cpp  Calisma10  Calisma10.cpp  Calisma11  Calisma11.cpp  Calisma12  Calisma12.cpp  Calisma13  Calisma13.cpp  Calisma14  Calisma14.cpp  Calisma15  Calisma15.cpp  Calisma16  Calisma16.cpp  Calisma17  Calisma17.cpp  Calisma18  Calisma18.cpp  Calisma19  Calisma19.cpp  Calisma2  Calisma2.cpp  Calisma20  Calisma20.cpp  Calisma21  Calisma21.cpp  Calisma22.cpp  Calisma23  Calisma23.cpp  Calisma24.cpp  Calisma29.cpp  Calisma3  Calisma3.cpp  Calisma4  Calisma4.cpp  Calisma5  (+11 more)
